[package]
name = "xlr"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-gateway = { version = "0.15", features = ["rustls-native-roots", "twilight-http"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-model = "0.15"
twilight-http = "0.15"
parking_lot = "0.12"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
ahash = "0.8"
